--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-neural_net = { path = "../neural_net" }
+neural_net = { path = "../neural_net", features = ["logging"] }
 ndarray = { workspace = true }
 rand = { workspace = true }
 num-traits = { workspace = true }
