--- a/neural_net/Cargo.toml
+++ b/neural_net/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 ndarray = { workspace = true }
 rand = { workspace = true }
 num-traits = { workspace = true }
+log.workspace = true
 
 [dev-dependencies]
 criterion = "0.5.1"
