--- a/neural_net/Cargo.toml
+++ b/neural_net/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ndarray = { workspace = true }
-rand = { workspace = true }
-num-traits = { workspace = true }
+ndarray.workspace = true
+rand.workspace = true
+num-traits.workspace = true
 log.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 criterion = "0.5.1"
