--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [workspace]
+resolver = "2"
 members = ["neural_net", "application"]
-workspace.resolver = "2"
 
 [workspace.dependencies]
-ndarray = "0.16.1"
+ndarray = {version = "0.16.1", features = ["serde"]}
 num-traits = "0.2.18"
 rand = "0.8.5"
+log = "0.4.27"
+serde = {version = "1.0", features = ["derive"]}
 
 [workspace.dev-dependencies]
 criterion = "0.5.1"
 
-[profile.release]
-debug = 1
 
