--- a/neural_net/Cargo.toml
+++ b/neural_net/Cargo.toml
@@ -9,9 +9,11 @@ rand.workspace = true
 num-traits.workspace = true
 log.workspace = true
 serde.workspace = true
+rayon = "1.10.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
+rand_chacha = "0.9.0"
 
 [[bench]]
 name = "feedforward"
