--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "application"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-neural_net = { path = "../neural_net", features = ["logging"] }
+neural_net = { path = "../neural_net", features = ["loss"] }
 ndarray = { workspace = true }
 rand = { workspace = true }
 num-traits = { workspace = true }
