--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -8,3 +8,4 @@ neural_net = { path = "../neural_net", features = ["loss"] }
 ndarray = { workspace = true }
 rand = { workspace = true }
 num-traits = { workspace = true }
+anyhow.workspace = true
