--- a/neural_net/Cargo.toml
+++ b/neural_net/Cargo.toml
@@ -10,6 +10,9 @@ num-traits.workspace = true
 log.workspace = true
 serde.workspace = true
 rayon = "1.10.0"
+anyhow.workspace = true
+bincode.workspace = true
+serde_json.workspace = true
 
 [dev-dependencies]
 criterion = "0.5.1"
