--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = {version = "1.0", features = ["derive"]}
 anyhow = "1.0"
 bincode = "1"
 serde_json = "1"
+chrono = {version = "0.4", features = ["serde"]}
 
 [workspace.dev-dependencies]
 criterion = "0.5.1"
