--- a/neural_net/Cargo.toml
+++ b/neural_net/Cargo.toml
@@ -13,6 +13,9 @@ rayon = "1.10.0"
 anyhow.workspace = true
 bincode.workspace = true
 serde_json.workspace = true
+chrono.workspace = true
+cubecl = "0.9.0-pre.3"
+bytemuck = "1.24.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
