--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["neural_net", "application"]
+members = ["neural_net", "application", "application_gpu"]
 
 [workspace.dependencies]
 ndarray = {version = "0.16", features = ["serde"]}
@@ -12,6 +12,9 @@ anyhow = "1.0"
 bincode = "1"
 serde_json = "1"
 chrono = {version = "0.4", features = ["serde"]}
+env_logger = "0.11.8"
+plotters = "0.3.7"
+cubecl = "0.9.0-pre.3"
 
 [workspace.dev-dependencies]
 criterion = "0.5.1"
