--- a/neural_net/Cargo.toml
+++ b/neural_net/Cargo.toml
@@ -14,8 +14,7 @@ anyhow.workspace = true
 bincode.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
-cubecl = "0.9.0-pre.3"
-bytemuck = "1.24.0"
+cubecl.workspace = true
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -30,4 +29,8 @@ name = "train"
 harness = false
 
 [features]
+default = ["loss", "f32"]
 loss = []
+f64 = []
+f32 = []
+f16 = []
